<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.MainActivity">

        <TextView
            android:id="@+id/textViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Pokesearch_main"
            android:text="@string/pokesearch"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/imageViewMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewMain"
            android:layout_width="121dp"
            android:layout_height="114dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/img_pokeball_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pokeball" />

        <LinearLayout
            android:id="@+id/linearLayout1Main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="200dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMain">

            <TextView
                android:id="@+id/textViewUserMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_user_main"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/editTextNomeMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_nome_main"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/textViewPasswordMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Senha:"
                android:textSize="25sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/editTextSenhaMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_senha_main"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2Main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1Main">

            <Button
                android:id="@+id/buttonLoginMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_entrar_main"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonCriarMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_criar_main"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/buttonSobreMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_sobre_main"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>