<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="239dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonEntrarRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewUserRegister"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/nome_register"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextNomeRegsiter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/nome_TRegister" />

        <TextView
            android:id="@+id/textViewSenhaRegister"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/senha_register"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/senha_TRegister"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonEntrarRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>